Remove initial empty string for fav store, fix breadcrumbs layout shift

--- a/src/components/breadcrumbs.module.css
+++ b/src/components/breadcrumbs.module.css
@@ -1,14 +1,17 @@
 .breadcrumbs {
+	position: absolute;
+	z-index: -1;
+	width: 100%;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-    justify-content: center;
+	justify-content: center;
 	gap: 0.5rem;
 	overflow-x: auto;
 	scrollbar-width: none;
 	user-select: none;
-    place-self: center;
-    flex: 1;
+	place-self: center;
+	flex: 1;
 }
 
 .breadcrumb {
@@ -16,7 +19,7 @@
 	border-radius: 0.375rem;
 	padding: 0.125rem 0.375rem;
 	font-size: 0.875rem;
-    white-space: nowrap;
+	white-space: nowrap;
 }
 
 .breadcrumb:hover {
